<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/login_logo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/login_line" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/circle_normal"
                    android:textCursorDrawable="@drawable/cursor_white"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_password" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/login_line" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/circle_normal"
                    android:textCursorDrawable="@drawable/cursor_white"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/login_remember"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:theme="@style/YellowCheck" />

                <RelativeLayout
                    android:id="@+id/lay_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/textView_for"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textSize="16sp"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1dp"
                        android:layout_below="@+id/textView_for"
                        android:layout_marginTop="2dp"
                        android:background="@color/white" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/white_login_square"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/login_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_skip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_login_square"
                    android:text="@string/login_skip"
                    android:textColor="@color/login_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_account"
                    android:textSize="16sp"
                    android:textColor="@color/white" />

                <RelativeLayout
                    android:id="@+id/lay_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_signup"
                        android:textSize="16sp"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="55dp"
                        android:layout_height="1dp"
                        android:layout_below="@+id/textView2"
                        android:layout_marginTop="2dp"
                        android:background="@color/white" />
                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_login_square"
                android:text="@string/login_register"
                android:textColor="@color/login_text"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>