<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_email" />

            <View
                android:layout_width="0.4dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/login_line" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edittext_background"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textColorHint="@color/circle_normal"
                android:textCursorDrawable="@drawable/cursor_white"

                />

        </LinearLayout>

        <include layout="@layout/row_cross_line" />


        <Button
            android:id="@+id/button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/white_update_square"
            android:text="@string/forgot_submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>
</RelativeLayout>