<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00000000"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="@color/card_view_white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_comment_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/sec_bottom"
                android:layout_margin="5dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />


            <TextView
                android:id="@+id/txt_comment_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/comment_view_no"
                android:textColor="@color/text_title"
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="gone" />


            <RelativeLayout
                android:id="@+id/sec_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/edt_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/image_sent"
                    android:background="@drawable/comment_button"
                    android:hint="@string/leave_comment"
                    android:padding="10dp"
                    android:textColor="@color/text_title"
                    android:textColorHint="@color/gray"
                    android:textCursorDrawable="@drawable/cursor_black">

                </EditText>

                <ImageView
                    android:id="@+id/image_sent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:paddingStart="2dp"
                    android:src="@drawable/send" />

            </RelativeLayout>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>

